<resources>
    <string name="app_name">Tines and Barbs</string>
    <string name="label">Tournament Block App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="fetch">"Fetching Data...."</string>
    <string name="sign">Go To Sign Up page </string>
    <string name="go">Not Linked Yet?</string>
    <string name="fyp">Forgot Your Password???</string>
    <string name="ta">Tournament\'s Arrangement</string>
    <string name="pa">Players\'s Arrangement</string>
    <string name="log">LOG IN</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="s">Swipe left for other tournament blocks else slide right</string>
    <string name="status">View Status</string>
    <string name="result">View Result</string>
    <string name="site">Go To Website</string>
    <string name="out">Log Out</string>
    <string name="apk">Go Back To App</string>
    <string name="no">No Tournaments Going On!!!</string>
    <string name="net">No or Lost Internet Connection!!!</string>
    <string name="net1">Click Below</string>
    <string name="wifi">Check Wifi Connections</string>
    <string name="data">Check Data Connections</string>
    <string name="start">Start A New One</string>
    <string name="tb">Tournament Block</string>
    <string name="r1">Round 1</string>
    <string name="r2">Round 2</string>
    <string name="r3">Round 3</string>
    <string name="quote">If Chess is a bicycle, Tines And</string>
    <string name="quote1">Barbs is a private jet</string>
    <string name="tbc">Tines And Barbs Company</string>
    <string name="view_result">View Result</string>
    <string name="join">Click On join</string>
    <string name="refresh">Refresh</string>
    <string name="exit">Exit</string>
    <string name="check">Please Check Your Internet Connection!!!</string>
    <string name="name">Player\'s Name</string>
    <string name="Rating">Rating</string>
    <string name="PZero">P-Zero Score</string>
    <string name="sn">S.No.</string>
    <string name="title1">Rank</string>
    <string name="title2">Player\'s Name</string>
    <string name="title3">Rating</string>
    <string name="title4">Point</string>
    <string name="title5">E-Score</string>
    <string name="title6">P-Score</string>
    <string name="title7">G-Score</string>

</resources>
