<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="210sp"
        android:layout_height="210sp"
        app:srcCompat="@drawable/p"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email" />

    <Button
        android:id="@+id/l"
        android:layout_width="wrap_content"
        android:layout_height="30sp"
        android:onClick="l"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_purple"
        android:clickable="true"
        android:fontFamily="Arial"
        android:text="@string/log"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/sign"
        android:clickable="true"
        android:onClick="sign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Arial"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/sign"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/forgot"
        android:clickable="true"
        android:onClick="forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="Arial"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/fyp"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/l"
        android:layout_alignEnd="@+id/password" />

</RelativeLayout>










