<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title1"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="5sp"
        android:layout_marginRight="8sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"
        android:layout_weight="1"
        android:text="@string/title1" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0sp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginLeft="-30sp"
        android:textColor="@android:color/holo_orange_dark"
        android:layout_weight="2.5"
        android:text="@string/title2" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="0sp"
        android:layout_weight="1"
        android:text="@string/title3" />
    <TextView
        android:id="@+id/title4"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#9400D3"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="10sp"
        android:layout_weight="1"
        android:text="@string/title4" />

    <TextView
        android:id="@+id/title6"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#A52A2A"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="10sp"
        android:layout_weight="1"
        android:text="@string/title6" />
    <TextView
        android:id="@+id/title7"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#FF7F50"
        android:layout_marginTop="0sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="3sp"
        android:layout_weight="1"
        android:text="@string/title7" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/sn"
            android:layout_width="0sp"
            android:layout_marginTop="40sp"
            android:textSize="15sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="8sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_weight="1"
            android:text="" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0sp"
        android:textSize="15sp"
        android:layout_marginTop="40sp"
        android:layout_marginLeft="-30sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_weight="2.5"
        android:text="" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="0sp"
        android:textSize="15sp"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginLeft="0sp"
        android:layout_weight="1"
        android:text="" />
    <TextView
        android:id="@+id/point"
        android:layout_width="0sp"
        android:textSize="15sp"
        android:layout_marginTop="40sp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:layout_marginLeft="0sp"
        android:layout_weight="1"
        android:text="" />
        <TextView
            android:id="@+id/pscore"
            android:layout_width="0sp"
            android:textSize="15sp"
            android:layout_marginTop="40sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:text="" />
        <TextView
            android:id="@+id/gscore"
            android:layout_width="0sp"
            android:textSize="15sp"
            android:layout_marginTop="40sp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginLeft="10sp"
            android:layout_weight="1"
            android:text="" />
    </LinearLayout>
    </RelativeLayout>
